--- a/Blood App/app/src/main/res/layout/activity_admin.xml
+++ b/Blood App/app/src/main/res/layout/activity_admin.xml
@@ -35,14 +35,14 @@
             android:id="@+id/buttonPending"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:textAllCaps="false"
-            android:fontFamily="@font/poppinsregular"
             android:layout_marginEnd="8dp"
-            android:textColor="@color/white"
-            android:textSize="16sp"
-            android:background="@drawable/primary_color_filled"
-            android:text="Pending" />
+            android:layout_weight="1"
+            android:background="@drawable/primary_outline_textbox"
+            android:fontFamily="@font/poppinsregular"
+            android:text="Pending"
+            android:textAllCaps="false"
+            android:textColor="@color/Text"
+            android:textSize="16sp" />
 
         <Button
             android:id="@+id/buttonApproved"
