--- a/Blood App/app/src/main/res/layout/contact_us_dailog.xml
+++ b/Blood App/app/src/main/res/layout/contact_us_dailog.xml
@@ -82,7 +82,7 @@
                 android:layout_marginBottom="16dp"
                 android:layout_weight="1"
                 android:alpha="1"
-                android:background="@color/red_500"
+                android:background="@drawable/primary_color_filled"
                 android:fontFamily="@font/poppinsmedium"
                 android:gravity="center"
                 android:paddingTop="16dp"
