--- a/Blood App/app/src/main/res/layout/dialog_blood_requested.xml
+++ b/Blood App/app/src/main/res/layout/dialog_blood_requested.xml
@@ -42,7 +42,7 @@
         android:layout_marginStart="24dp"
         android:layout_marginEnd="24dp"
         android:layout_marginTop="8dp"
-        android:background="@color/red_500"
+        android:background="@drawable/primary_color_filled"
         android:fontFamily="@font/poppinsmedium"
         android:gravity="center_horizontal"
         android:paddingTop="16dp"
