--- a/Blood App/app/src/main/res/layout/dialog_error_404.xml
+++ b/Blood App/app/src/main/res/layout/dialog_error_404.xml
@@ -21,7 +21,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
         android:layout_marginEnd="24dp"
-        android:background="@color/red_500"
+        android:background="@drawable/primary_color_filled"
         android:fontFamily="@font/poppinsmedium"
         android:gravity="center_horizontal"
         android:paddingTop="16dp"
