--- a/Blood App/app/src/main/res/layout/fragment_profile.xml
+++ b/Blood App/app/src/main/res/layout/fragment_profile.xml
@@ -178,6 +178,43 @@
                     android:textSize="16sp" />
             </LinearLayout>
 
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+
+                android:orientation="horizontal"
+                android:layout_marginBottom="12dp"
+                android:padding="12dp">
+
+                <TextView
+                    android:id="@+id/textView_your_appointment"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/poppinsregular"
+                    android:text="My Appointment"
+                    android:padding="8dp"
+                    android:layout_weight="1"
+                    android:textAlignment="center"
+                    android:layout_margin="4dp"
+                    android:background="@drawable/primary_outline_textbox"
+                    android:textColor="@color/Text"
+                    android:textSize="16sp" />
+
+                <TextView
+                    android:id="@+id/textView_your_request"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/poppinsregular"
+                    android:text="My Request"
+                    android:padding="8dp"
+                    android:layout_weight="1"
+                    android:layout_margin="4dp"
+                    android:textAlignment="center"
+                    android:background="@drawable/primary_outline_textbox"
+                    android:textColor="@color/Text"
+                    android:textSize="16sp" />
+            </LinearLayout>
+
         </LinearLayout>
 
         <LinearLayout
