--- a/Blood App/app/src/main/res/layout/activity_change_password.xml
+++ b/Blood App/app/src/main/res/layout/activity_change_password.xml
@@ -4,7 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/background"
     tools:context=".ui.home.ChangePassword">
+
     <TextView
         android:id="@+id/textView14"
         android:layout_width="wrap_content"
