--- a/Blood App/app/src/main/res/layout/fragment_profile.xml
+++ b/Blood App/app/src/main/res/layout/fragment_profile.xml
@@ -49,84 +49,6 @@
             </LinearLayout>
 
             <LinearLayout
-                android:id="@+id/settings_feedback"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="12dp"
-                android:background="@drawable/primary_grey_filled"
-                android:orientation="horizontal"
-                android:padding="12dp">
-
-                <ImageView
-                    android:id="@+id/imageView8"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:src="@drawable/ic_outline_feedback_24" />
-
-                <TextView
-                    android:id="@+id/textView5"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:fontFamily="@font/poppinsregular"
-                    android:text="  Send Feedback"
-                    android:textColor="@color/Text"
-                    android:textSize="16sp" />
-            </LinearLayout>
-
-            <LinearLayout
-                android:id="@+id/settings_about"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginBottom="12dp"
-                android:background="@drawable/primary_grey_filled"
-                android:orientation="horizontal"
-                android:padding="12dp">
-
-                <ImageView
-                    android:id="@+id/imageView11"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:src="@drawable/ic_outline_info_24" />
-
-                <TextView
-                    android:id="@+id/textView8"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:fontFamily="@font/poppinsregular"
-                    android:text="  Contact Us"
-                    android:textColor="@color/Text"
-                    android:textSize="16sp" />
-            </LinearLayout>
-
-            <LinearLayout
-                android:id="@+id/settings_share"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:background="@drawable/primary_grey_filled"
-                android:orientation="horizontal"
-                android:layout_marginBottom="12dp"
-                android:padding="12dp">
-
-                <ImageView
-                    android:id="@+id/imageView17"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:src="@drawable/ic_baseline_share_24" />
-
-                <TextView
-                    android:id="@+id/textView13"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:fontFamily="@font/poppinsregular"
-                    android:text="  Share"
-                    android:textColor="@color/Text"
-                    android:textSize="16sp" />
-            </LinearLayout>
-
-            <LinearLayout
                 android:id="@+id/settings_admin"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -147,7 +69,7 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:fontFamily="@font/poppinsregular"
-                    android:text="  Admin"
+                    android:text="  Admin (Blood Bank)"
                     android:textColor="@color/Text"
                     android:textSize="16sp" />
             </LinearLayout>
@@ -173,7 +95,7 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:fontFamily="@font/poppinsregular"
-                    android:text="  Admin 1 hue hue"
+                    android:text="  Admin (Request)"
                     android:textColor="@color/Text"
                     android:textSize="16sp" />
             </LinearLayout>
