--- a/Blood App/app/src/main/res/layout/card_request_contact.xml
+++ b/Blood App/app/src/main/res/layout/card_request_contact.xml
@@ -35,6 +35,16 @@
                 app:srcCompat="@drawable/ic_baseline_close_24" />
 
 
+            <TextView
+                android:id="@+id/card_request_info"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:layout_marginBottom="16dp"
+                android:fontFamily="@font/poppinsregular"
+                android:textColor="@color/Text"
+                android:textSize="16sp" />
+
             <Button
                 android:id="@+id/card_request_contact_btn"
                 android:layout_width="match_parent"
