--- a/Blood App/app/src/main/res/layout/fragment_login.xml
+++ b/Blood App/app/src/main/res/layout/fragment_login.xml
@@ -82,19 +82,6 @@
             android:textColorHint="@color/hint"
             android:textSize="16sp" />
 
-        <TextView
-            android:id="@+id/ForgetPasswordLogin"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="right"
-            android:layout_marginStart="32dp"
-            android:layout_marginTop="4dp"
-            android:layout_marginEnd="32dp"
-            android:text="Forget Password?"
-            android:textColor="@color/greySecondary"
-            android:textSize="16sp" />
-
-
 
     </LinearLayout>
 
@@ -106,7 +93,7 @@
         android:layout_marginEnd="24dp"
         android:layout_marginBottom="32dp"
         android:alpha="1"
-        android:background="@color/red_500"
+        android:background="@drawable/primary_color_filled"
         android:fontFamily="@font/poppinsmedium"
         android:gravity="center"
         android:paddingTop="16dp"
