--- a/Blood App/app/src/main/res/layout/fragment_login_home.xml
+++ b/Blood App/app/src/main/res/layout/fragment_login_home.xml
@@ -16,14 +16,14 @@
         android:layout_marginEnd="24dp"
         android:layout_marginBottom="32dp"
         android:alpha="1"
-        android:background="@color/red_500"
+        android:background="@drawable/primary_color_filled"
         android:fontFamily="@font/poppinsmedium"
         android:gravity="center"
         android:paddingTop="16dp"
         android:paddingBottom="16dp"
         android:text="Sign up"
-        android:textSize="14sp"
         android:textColor="@color/white"
+        android:textSize="14sp"
         app:layout_constraintBottom_toTopOf="@+id/LoginTextHome"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
