--- a/Blood App/app/src/main/res/layout/fragment_signup.xml
+++ b/Blood App/app/src/main/res/layout/fragment_signup.xml
@@ -114,7 +114,7 @@
         android:layout_marginEnd="24dp"
         android:layout_marginBottom="32dp"
         android:alpha="1"
-        android:background="@color/red_500"
+        android:background="@drawable/primary_color_filled"
         android:fontFamily="@font/poppinsmedium"
         android:gravity="center"
         android:paddingTop="16dp"
